// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedTableHead should call sort handler on click and return the id 1`] = `
"<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"right\\" sortDirection=\\"desc\\">
      <WithStyles(ForwardRef(TableSortLabel)) hideSortIcon={false} active={true} direction=\\"desc\\" onClick={[Function (anonymous)]} data-test=\\"table-sort-label-column1\\">
        <span>
          column1Element
        </span>
        <span className={{...}}>
          sorted descending
        </span>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"left\\" sortDirection={false}>
      <span>
        column2Element
      </span>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>"
`;

exports[`EnhancedTableHead should render with minimal props 1`] = `
"<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"right\\" sortDirection=\\"desc\\">
      <WithStyles(ForwardRef(TableSortLabel)) hideSortIcon={false} active={true} direction=\\"desc\\" onClick={[Function (anonymous)]} data-test=\\"table-sort-label-column1\\">
        <span>
          column1Element
        </span>
        <span className={{...}}>
          sorted descending
        </span>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"left\\" sortDirection={false}>
      <span>
        column2Element
      </span>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>"
`;

exports[`EnhancedTableHead should show select all box and handle clicking it when enableSelectableRows is true 1`] = `
"<WithStyles(ForwardRef(TableHead))>
  <WithStyles(ForwardRef(TableRow))>
    <WithStyles(ForwardRef(TableCell)) padding=\\"checkbox\\">
      <Checkbox data-test=\\"select-all-checkbox\\" indeterminate={false} checked={false} onChange={[Function: mockConstructor] { _isMockFunction: true, getMockImplementation: [Function (anonymous)], mock: Object [Object: null prototype] { calls: [ [] ], instances: [ undefined ], invocationCallOrder: [ 2 ], results: [ Object [Object: null prototype] { isThrow: false, value: undefined } ] }, mockClear: [Function (anonymous)], mockReset: [Function (anonymous)], mockRestore: [Function (anonymous)], mockReturnValueOnce: [Function (anonymous)], mockResolvedValueOnce: [Function (anonymous)], mockRejectedValueOnce: [Function (anonymous)], mockReturnValue: [Function (anonymous)], mockResolvedValue: [Function (anonymous)], mockRejectedValue: [Function (anonymous)], mockImplementationOnce: [Function (anonymous)], mockImplementation: [Function (anonymous)], mockReturnThis: [Function (anonymous)], mockName: [Function (anonymous)], getMockName: [Function (anonymous)] }} inputProps={{...}} />
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"right\\" sortDirection=\\"desc\\">
      <WithStyles(ForwardRef(TableSortLabel)) hideSortIcon={false} active={true} direction=\\"desc\\" onClick={[Function (anonymous)]} data-test=\\"table-sort-label-column1\\">
        <span>
          column1Element
        </span>
        <span className={{...}}>
          sorted descending
        </span>
      </WithStyles(ForwardRef(TableSortLabel))>
    </WithStyles(ForwardRef(TableCell))>
    <WithStyles(ForwardRef(TableCell)) size=\\"small\\" align=\\"left\\" sortDirection={false}>
      <span>
        column2Element
      </span>
    </WithStyles(ForwardRef(TableCell))>
  </WithStyles(ForwardRef(TableRow))>
</WithStyles(ForwardRef(TableHead))>"
`;
